--- a/blocks/cover/___item/cover__item.css
+++ b/blocks/cover/___item/cover__item.css
@@ -46,7 +46,7 @@
 
 @media screen and (min-width: 1280px) {
     .cover__item {
-        width: 95%;
+        max-width: 1184px;
         margin: auto;
         min-height: 740px;
     }
