--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -4,15 +4,14 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-    width: 560px;
     margin: 0;
     padding-bottom: 32px;
     position: relative;
+    max-width: 560px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
     .cover__title {
-        font-weight: 900;
         font-size: 32px;
         line-height: 35px;
         width: 288px;
