--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,10 @@
     width: 100%;
     height: 100%;
     background-color: #2A2C2F;
-    font-family: 'Inter';
+    font-family: 'Inter', Helvetica, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
     color: #fff;
     display: flex;
     flex-direction: column;
