--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,13 +7,19 @@
 }
 
 @media screen and (max-width: 320px) {
-    .intro__list {
+    .photo-grid {
         margin-bottom: 64px;
     }
 }
 
 @media screen and (min-width: 1024px) {
-    .intro__list {
+    .photo-grid {
         margin-bottom: 92px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .photo-grid {
+        max-width: 1280px;
     }
 }
