--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,19 +1,15 @@
 @font-face {
     font-family: 'Inter';
-    src: url(./Inter-Web/Inter-Regular.woff) format('woof');
-    src: url(./Inter-Web/Inter-Regular.woff2) format('woff2');
+    font-style:  normal;
+    src: url(./Inter-Web/Inter-Regular.woff) format('woff'),
+         url(./Inter-Web/Inter-Regular.woff2) format('woff2');
+    font-weight: 400;
 }
 
 @font-face {
     font-family: 'Inter';
-    src: url(./Inter-Web/Inter-Bold.woff) format('woff');
-    src: url(./Inter-Web/Inter-Bold.woff2) format('woff2');
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: 'Inter';
-    src: url(./Inter-Web/Inter-Italic.woff) format('woff');
-    src: url(./Inter-Web/Inter-Italic.woff2) format('woff2');
-    font-style: italic;
+    font-style:  normal;
+    src: url("Inter-Black.woff2?v=3.19") format("woff2"),
+         url("Inter-Black.woff?v=3.19") format("woff");
+    font-weight: 900;
 }
