--- a/blocks/cover/___item/cover__item.css
+++ b/blocks/cover/___item/cover__item.css
@@ -1,6 +1,7 @@
 .cover__item {
     background-image: url(./../../../images/cover-trains.jpg);
     width: 100%;
+    height: 62.5vw;
     min-height: 480px;
     display: flex;
     flex-direction: column;
@@ -15,6 +16,7 @@
     position: absolute;
     display: block;
     width: 100%;
+    height: 62.5vw;
     min-height: 480px;
     background-color: #2A2C2F;
     opacity: .3;
@@ -26,33 +28,13 @@
     transition: opacity ease-in-out .5s;
 }
 
-@media screen and (max-width: 320px) {
-    .cover__item {
-        min-height: 200px;
-    }
-    .cover__item::before {
-        min-height: 200px;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .cover__item {
-        min-height: 640px;
-    }
-    .cover__item::before {
-        min-height: 640px;
-    }
-}
-
 @media screen and (min-width: 1280px) {
     .cover__item {
         max-width: 1184px;
         margin: auto;
-        min-height: 740px;
     }
     .cover__item::before {
-        width: 95%;
+        max-width: 1184px;
         margin: auto;
-        min-height: 740px;
     }
 }
