--- a/blocks/cover/___item/cover__item.css
+++ b/blocks/cover/___item/cover__item.css
@@ -2,7 +2,7 @@
     background-image: url(./../../../images/cover-trains.jpg);
     width: 100%;
     height: 62.5vw;
-    min-height: 480px;
+    min-height: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,7 +17,7 @@
     display: block;
     width: 100%;
     height: 62.5vw;
-    min-height: 480px;
+    min-height: 200px;
     background-color: #2A2C2F;
     opacity: .3;
 }
@@ -31,10 +31,12 @@
 @media screen and (min-width: 1280px) {
     .cover__item {
         max-width: 1184px;
+        max-height: 740px;
         margin: auto;
     }
     .cover__item::before {
         max-width: 1184px;
+        max-height: 740px;
         margin: auto;
     }
 }
