--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 .cover__subtitle {
     color: #fff;
-    width: 360px;
+    max-width: 360px;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
@@ -9,10 +9,10 @@
     position: relative;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .cover__subtitle {
         font-size: 14px;
         line-height: 16px;
-        width: 288px;
+        max-width: 288px;
     }
 }
