--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,3 +1,11 @@
 .cover {
     width: 100%;
+    margin: 90px 0 90px;
+}
+
+@media screen and (max-width: 767px) {
+    .cover {
+        margin-top: 65px;
+        margin-bottom: 65px;
+    }
 }
