--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -13,11 +13,15 @@
     transition: opacity ease-in-out .5s;
 }
 
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 767px) {
     .footer__link {
         font-size: 24px;
         line-height: 24px;
         padding-bottom: 32px;
         padding-right: 0;
+    }
+    .footer__link:last-of-type {
+        padding-bottom: 0;
     }
 }
