--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,7 +4,7 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 28px;
-    padding-left: 18px;
+    margin-left: 18px;
 }
 
 .header__lang-link:hover {
@@ -13,7 +13,7 @@
     transition: opacity ease-in-out .5s;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .header__lang-link {
         font-size: 18px;
         line-height: 20px;
