--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,6 @@
 .intro__text {
     max-width: 690px;
-    margin-bottom: 33px;
+    margin: 0 0 33px;
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
