--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,10 +6,16 @@
     margin-top: 88px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .intro__title {
         font-size: 32px;
         line-height: 35px;
         margin-top: 64px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .intro__title {
+        margin-top: 92px;
     }
 }
