--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -2,3 +2,9 @@
     width: 100%;
     max-width: 984px;
 }
+
+@media screen and (max-width: 1023px) {
+    .lead__image {
+        width: 100vw;
+    }
+}
