--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,9 +6,11 @@
     margin-bottom: 88px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .photo-grid {
+        width: 90%;
         margin-bottom: 64px;
+        gap: 12px;
     }
 }
 
