--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,4 @@
 .place__title {
-    width: min-content;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
@@ -9,17 +8,19 @@
     align-self: end;
 }
 
-@media screen and (max-width: 768px) {
-    .place__title {        
-        font-size: 32px;
-        line-height: 35px;
-    }
-}
-
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
     .place__title {
         font-size: 42px;
         line-height: 46px;
         align-self: start;
+        min-width: 340px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place__title {        
+        font-size: 32px;
+        line-height: 35px;
+        min-width: 310px;
     }
 }
