--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,17 +1,27 @@
 .place {
     height: min-content;
-    padding-bottom: 48px;
+    padding-bottom: 75px;
     display: grid;
     grid-template-rows: repeat(2, min-content);
     grid-template-columns: min-content 50%;
     gap: 24px 3%;
 }
 
-@media screen and (max-width: 768px) {
+.place:last-of-type {
+    padding-bottom: 0;
+}
+
+@media screen and (max-width: 767px) {
     .place {
         display: flex;
         flex-direction: column;
         gap: 32px 3%;
         padding-bottom: 25px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .place {
+        padding-bottom: 80px;
     }
 }
