--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,7 @@
 
 @import url(./../blocks/header/header.css);
 @import url(./../blocks/header/__logo/header__logo.css);
+@import url(./../blocks/lang-links/lang-links.css);
 @import url(./../blocks/header/__lang-link/header__lang-link.css);
 @import url(./../blocks/header/__lang-link/_selected/header__lang-link_selected.css);
 
