--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -1,29 +1,29 @@
 .cover__item {
     background-image: url(./../../../images/cover-trains.jpg);
-    width: 100%;
-    height: 62.5vw;
-    min-height: 200px;
+    max-width: 100%;
+    min-height: 740px;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-decoration: none;
     justify-content: center;
     background-size: cover;
+    position: relative;
 }
 
 .cover__item::before {
     content: "";
     position: absolute;
+    top: 0;
+    left: 0;
     display: block;
     width: 100%;
-    height: 62.5vw;
-    min-height: 200px;
-    background-color: #2A2C2F;
+    height: 100%;
+    background-color: #2a2c2f;
     opacity: .3;
 }
 
 .cover__item:hover::before {
-    background-color: #2A2C2F;
     opacity: .8;
     transition: opacity ease-in-out .5s;
 }
@@ -31,12 +31,24 @@
 @media screen and (min-width: 1280px) {
     .cover__item {
         max-width: 1184px;
-        max-height: 740px;
-        margin: auto;
+        margin: 0 auto;
     }
-    .cover__item::before {
-        max-width: 1184px;
-        max-height: 740px;
-        margin: auto;
+}
+
+@media screen and (max-width: 1279px) {
+    .cover__item {
+        min-height: 640px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .cover__item {
+        min-height: 480px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .cover__item {
+        min-height: 200px;
     }
 }
