--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,4 +1,5 @@
 .cover {
+    align-items: center;
     width: 100%;
     margin: 90px 0 90px;
 }
@@ -9,3 +10,11 @@
         margin-bottom: 65px;
     }
 }
+
+@media screen and (min-width: 1024px) {
+    .cover {
+        margin-top: 92px;
+        margin-bottom: 92px;
+    }
+}
+
