--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,16 +1,20 @@
 .header {
     display: flex;
-    width: 95%;
+    width: 91%;
     max-width: 1184px;
-    height: 52px;
     justify-content: space-between;
     align-items: flex-end;
     margin: 28px auto 48px;
 }
 
+@media screen and (max-width: 1023px) {
+    .header {
+        width: 94%;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .header {
-        height: 42px;
         margin-top: 18px;
         width: 90%;
     }
@@ -19,5 +23,6 @@
 @media screen and (min-width: 1280px) {
     .header {
         margin-bottom: 56px;
+        width: 95%;
     }
 }
