--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,3 +3,15 @@
     max-width: 984px;
     align-self: center;
 }
+
+@media screen and (min-width: 1024px) {
+    .intro {
+        width: 91%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .intro {
+        width: 90%;
+    }
+}
