--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,4 +1,5 @@
 .place__title {
+    max-width: min-content;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
@@ -13,7 +14,6 @@
         font-size: 42px;
         line-height: 46px;
         align-self: start;
-        min-width: 340px;
     }
 }
 
