--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,9 +1,16 @@
 .place__url-heading {
-    padding-bottom: 12px;
+    text-transform: uppercase;
+    padding-bottom: 6px;
     margin: 0;
     color: #aaa;
     font-weight: 400;
     font-size: 12px;
     line-height: 20px;
     letter-spacing: 2px;
+}
+
+@media screen and (max-width: 1023px) {
+    .place__url-heading {
+        padding-bottom: 12px;
+    }
 }
