--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,14 +1,21 @@
 .place {
-    height: min-content;
-    padding-bottom: 75px;
+    margin-bottom: 75px;
     display: grid;
     grid-template-rows: repeat(2, min-content);
     grid-template-columns: min-content 50%;
-    gap: 24px 3%;
+    gap: 24px 4%;
+    justify-content: center;
 }
 
 .place:last-of-type {
-    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
+@media screen and (max-width: 1023px) {
+    .place {
+        gap: 22px 4.25%;
+        margin-bottom: 70px;
+    }
 }
 
 @media screen and (max-width: 767px) {
@@ -16,12 +23,12 @@
         display: flex;
         flex-direction: column;
         gap: 32px 3%;
-        padding-bottom: 25px;
+        margin-bottom: 50px;
     }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1024px) {
     .place {
-        padding-bottom: 80px;
+        margin-bottom: 80px;
     }
 }
