--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,4 +1,22 @@
 .places {
-    width: 95%;
     max-width: 984px;
 }
+
+@media screen and (max-width: 1023px) {
+    .places {
+        width: 91%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .places {
+        width: 88%;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .places {
+        width: 76%;
+    }
+}
+
