--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 @import url(./../vendor/normalize.css);
-@import url(./../fonts/fonts.css);
+@import url(./../vendor/fonts/fonts.css);
 @import url(./../blocks/page/page.css);
 
 @import url(./../blocks/header/header.css);
@@ -7,6 +7,8 @@
 @import url(./../blocks/lang-links/lang-links.css);
 @import url(./../blocks/header/__lang-link/header__lang-link.css);
 @import url(./../blocks/header/__lang-link/_selected/header__lang-link_selected.css);
+
+@import url(./../blocks/main/main.css);
 
 @import url(./../blocks/lead/lead.css);
 @import url(./../blocks/lead/__title/lead__title.css);
@@ -18,6 +20,7 @@
 @import url(./../blocks/intro/__title/intro__title.css);
 @import url(./../blocks/intro/__text/intro__text.css);
 @import url(./../blocks/intro/__list/intro__list.css);
+@import url(./../blocks/intro/__span-accent/intro__span-accent.css);
 
 @import url(./../blocks/photo-grid/photo-grid.css);
 @import url(./../blocks/photo-grid/__item/photo-grid__item.css);
@@ -35,10 +38,9 @@
 
 @import url(./../blocks/cover/cover.css);
 @import url(./../blocks/cover/__background/cover__background.css);
-@import url(./../blocks/cover/___item/cover__item.css);
+@import url(./../blocks/cover/__item/cover__item.css);
 @import url(./../blocks/cover/__title/cover__title.css);
 @import url(./../blocks/cover/__subtitle/cover__subtitle.css);
-@import url(./../blocks/cover/__overlay/cover__overlay.css);
 
 @import url(./../blocks/footer/footer.css);
 @import url(./../blocks/footer-links/footer-links.css);
